--- a/rza1lu_soundbar_v1/.cproject
+++ b/rza1lu_soundbar_v1/.cproject
@@ -220,6 +220,7 @@
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.renesas.cdt.managedbuild.gcc.rz.option.compiler.cpp.include.1941277906" name="Include paths (-I)" superClass="com.renesas.cdt.managedbuild.gcc.rz.option.compiler.cpp.include" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/arm/cmsis/inc&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/renesas/drivers/r_dma&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/renesas/drivers/r_dmac/inc&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/renesas/middleware/sound/inc&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/renesas/middleware/riic_max9856/inc&quot;"/>
@@ -343,7 +344,6 @@
 								<option id="com.renesas.cdt.managedbuild.gcc.rz.option.linker.cpp.semihosting.558433534" name="Use semihosting (--specs=rdimon.specs)" superClass="com.renesas.cdt.managedbuild.gcc.rz.option.linker.cpp.semihosting" useByScannerDiscovery="false" value="false" valueType="boolean"/>
 								<option id="com.renesas.cdt.managedbuild.gcc.rz.option.linker.cpp.entrypoint.782175425" name="Entry Point:" superClass="com.renesas.cdt.managedbuild.gcc.rz.option.linker.cpp.entrypoint" useByScannerDiscovery="false" value="-Wl,-estart" valueType="string"/>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.renesas.cdt.managedbuild.gcc.rz.archives.cpp.userIncludeFile.2065154767" name="User defined archive (library) files (-l)" superClass="com.renesas.cdt.managedbuild.gcc.rz.archives.cpp.userIncludeFile" useByScannerDiscovery="false" valueType="stringList">
-									<listOptionValue builtIn="false" value="r_VirtualX"/>
 									<listOptionValue builtIn="false" value="eGaC"/>
 									<listOptionValue builtIn="false" value="freetype_rznew"/>
 									<listOptionValue builtIn="false" value="Guiliani"/>
@@ -351,7 +351,6 @@
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.renesas.cdt.managedbuild.gcc.rz.archives.cpp.userIncludePath.14734216" name="User defined archive search directories (-L)" superClass="com.renesas.cdt.managedbuild.gcc.rz.archives.cpp.userIncludePath" useByScannerDiscovery="false" valueType="stringList">
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/tes/Libraries/FreeRTOS/rza/Debug_StreamIt_eGML&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/tes/Libraries/FreeRTOS/rza&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/r_VirtualX/Debug}&quot;"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.renesas.cdt.managedbuild.gcc.rz.cpp.option.linkageOrder.685801398" name="Linkage Order List" superClass="com.renesas.cdt.managedbuild.gcc.rz.cpp.option.linkageOrder" useByScannerDiscovery="false" valueType="stringList">
 									<listOptionValue builtIn="false" value="&quot;.\src/renesas/middleware/video/src\r_rvapi_ceu.o&quot;"/>
@@ -1252,7 +1251,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="tes/Guiliani/Include/Platform/eGML|freertos/portable/gcc/arm_ca9_rza1h|tes/GUI_Sample/Common/Source/Platform/rzg|renesas/configuration/os_abstraction/src/r_os_abstraction-ddavi.c|tes/GUI_Sample/Common/Source/Platform/omap|lwip-1.4.1/test|tes/GUI_Sample/Source/Platform/win|renesas/middleware/WebIf/src/liveFile.c|renesas/middleware/lwip_ethernet/src/r_colate.c|tes/Guiliani/Include/Platform/GL|lwip-1.4.1/src/core/ipv6|freertos/portable/memmang/heap_5.c|tes/GUI_Sample/Common/Source/Platform/win|freertos/portable/iar|renesas/middleware/ssif_drv|tes/GSE/Source/Platform/general/GSE_config.cpp|renesas/application/app_eeprom|freertos/croutine.c|tes/Guiliani/Include/Platform/win" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="src"/>
+						<entry excluding="renesas/drivers/r_cache|renesas/middleware/WebIf|renesas/middleware/riic_d2audio|tes/Guiliani/Include/Platform/eGML|freertos/portable/gcc/arm_ca9_rza1h|tes/GUI_Sample/Common/Source/Platform/rzg|renesas/configuration/os_abstraction/src/r_os_abstraction-ddavi.c|tes/GUI_Sample/Common/Source/Platform/omap|lwip-1.4.1/test|tes/GUI_Sample/Source/Platform/win|renesas/middleware/WebIf/src/liveFile.c|renesas/middleware/lwip_ethernet/src/r_colate.c|tes/Guiliani/Include/Platform/GL|lwip-1.4.1/src/core/ipv6|freertos/portable/memmang/heap_5.c|tes/GUI_Sample/Common/Source/Platform/win|freertos/portable/iar|renesas/middleware/ssif_drv|tes/GSE/Source/Platform/general/GSE_config.cpp|renesas/application/app_eeprom|freertos/croutine.c|tes/Guiliani/Include/Platform/win" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="src"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -1273,6 +1272,7 @@
 			<storageModule moduleId="com.renesas.cdt.managedbuild.core.toolchainInfo">
 				<option id="toolchain.id" value="gcc-arm-embedded"/>
 				<option id="toolchain.version" value="6.3.1.20170620"/>
+				<option id="toolchain.enable" value="true"/>
 			</storageModule>
 			<storageModule moduleId="cdtBuildSystem" version="4.0.0">
 				<configuration artifactExtension="elf" artifactName="${ProjName}" buildArtefactType="org.eclipse.cdt.build.core.buildArtefactType.exe" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=org.eclipse.cdt.build.core.buildArtefactType.exe,org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug" cleanCommand="rm -rf *.lst *.lis *.lpp *.map" description="" errorParsers="org.eclipse.cdt.core.GASErrorParser;org.eclipse.cdt.core.GmakeErrorParser;org.eclipse.cdt.core.GLDErrorParser;org.eclipse.cdt.core.CWDLocator;org.eclipse.cdt.core.GCCErrorParser" id="com.renesas.cdt.managedbuild.gcc.rz.configuration.debug.1403796341.376367202" name="Release" parent="com.renesas.cdt.managedbuild.gcc.rz.configuration.debug" preannouncebuildStep="Performing Build Versioning Step and Creating Web resources" prebuildStep="..\util\dos_scripts\Build_Compiletime_Script.bat">
@@ -1515,15 +1515,35 @@
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/renesas/middleware/usb_func_controller/inc&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/renesas/middleware/usb_host_controller/inc&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/renesas/middleware/video/inc&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/renesas/drivers/r_cache/inc&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/freertos/include&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/lwip-1.4.1/src/include&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/lwip-1.4.1/src/include/ipv4&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/freertos/portable/memmang&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/freertos/portable/gcc/arm_ca9_rza1lu&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/renesas/drivers/r_cache/inc&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/lvgl&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/lvgl/examples/lv_tutorial&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/Webio&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/tes/eGaC/Include/eC&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/tes/eGaC/Include/eC/FreeRTOS&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/tes/eGaC/Include/eC/RZA1H&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/tes/eGaC/Include/eGML&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/tes/eGaC/Include/eGML/eGML_RZA1H&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/tes/eGaC/Include/eDBG&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/tes/Include/freetype&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/tes/Include/freetype/freetype&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/tes/Guiliani/Include/Core&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/tes/Guiliani/Include/GUIconfig&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/tes/Guiliani/Include/ImageDecoder&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/tes/Guiliani/Include/Platform/eGML&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/tes/Guiliani/Include/Platform/RZA1H&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/tes/Guiliani/Include/Platform/general&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/tes/Guiliani/Include/Platform/GL&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/tes/GUI_Sample/Common/Include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/tes/GUI_Sample/Common/Include/Platform&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/tes/GUI_Sample/Common/Include/Platform/FreeRTOS&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/tes/GUI_Sample/Include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/tes/GUI_Sample/Include/CustomExtension&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/tes/GUI_Sample/Include/GUIConfig&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/tes/GUI_Sample/Include/GUIConfigCustom&quot;"/>
 								</option>
 								<option id="com.renesas.cdt.managedbuild.gcc.rz.option.compiler.cpp.language.1711019140" name="Language standard" superClass="com.renesas.cdt.managedbuild.gcc.rz.option.compiler.cpp.language" useByScannerDiscovery="true" value="com.renesas.cdt.managedbuild.gcc.rz.option.compiler.cpp.language.default" valueType="enumerated"/>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.renesas.cdt.managedbuild.gcc.rz.option.compiler.cpp.otherOptimization.1533674440" name="Other optimization flags" superClass="com.renesas.cdt.managedbuild.gcc.rz.option.compiler.cpp.otherOptimization" useByScannerDiscovery="true" valueType="stringList">
@@ -1577,12 +1597,16 @@
 								<option id="com.renesas.cdt.managedbuild.gcc.rz.option.linker.cpp.semihosting.1741653425" name="Use semihosting (--specs=rdimon.specs)" superClass="com.renesas.cdt.managedbuild.gcc.rz.option.linker.cpp.semihosting" useByScannerDiscovery="false" value="false" valueType="boolean"/>
 								<option id="com.renesas.cdt.managedbuild.gcc.rz.option.linker.cpp.entrypoint.643512812" name="Entry Point:" superClass="com.renesas.cdt.managedbuild.gcc.rz.option.linker.cpp.entrypoint" useByScannerDiscovery="false" value="-Wl,-estart" valueType="string"/>
 								<option id="com.renesas.cdt.managedbuild.gcc.rz.cpp.option.linker.nostart.289051089" name="Do not use standard start files (-nostartfiles)" superClass="com.renesas.cdt.managedbuild.gcc.rz.cpp.option.linker.nostart" useByScannerDiscovery="false" value="true" valueType="boolean"/>
-								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="true" id="com.renesas.cdt.managedbuild.gcc.rz.archives.cpp.userIncludeFile.2065154767" name="User defined archive (library) files (-l)" superClass="com.renesas.cdt.managedbuild.gcc.rz.archives.cpp.userIncludeFile" useByScannerDiscovery="false" valueType="stringList"/>
+								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.renesas.cdt.managedbuild.gcc.rz.archives.cpp.userIncludeFile.2065154767" name="User defined archive (library) files (-l)" superClass="com.renesas.cdt.managedbuild.gcc.rz.archives.cpp.userIncludeFile" useByScannerDiscovery="false" valueType="stringList">
+									<listOptionValue builtIn="false" value="eGaC"/>
+									<listOptionValue builtIn="false" value="freetype_rznew"/>
+									<listOptionValue builtIn="false" value="Guiliani"/>
+								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.renesas.cdt.managedbuild.gcc.rz.archives.cpp.userIncludePath.14734216" name="User defined archive search directories (-L)" superClass="com.renesas.cdt.managedbuild.gcc.rz.archives.cpp.userIncludePath" useByScannerDiscovery="false" valueType="stringList">
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/tes/Libraries/FreeRTOS/rza/Release_StreamIt_eGML&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/tes/Libraries/FreeRTOS/rza&quot;"/>
 								</option>
-								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.renesas.cdt.managedbuild.gcc.rz.cpp.option.linkageOrder.1442591044" name="Linkage Order List" superClass="com.renesas.cdt.managedbuild.gcc.rz.cpp.option.linkageOrder" valueType="stringList">
+								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.renesas.cdt.managedbuild.gcc.rz.cpp.option.linkageOrder.1442591044" name="Linkage Order List" superClass="com.renesas.cdt.managedbuild.gcc.rz.cpp.option.linkageOrder" useByScannerDiscovery="false" valueType="stringList">
 									<listOptionValue builtIn="false" value="&quot;.\src/renesas/middleware/video/src\r_rvapi_ceu.o&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;.\src/renesas/middleware/video/src\r_rvapi_vdc.o&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;.\src/renesas/middleware/video/src\r_rvapi_vdec.o&quot;"/>
@@ -2463,7 +2487,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="freertos/portable/gcc/arm_ca9_rza1h|tes/GUI_Sample/Common/Source/Platform/rzg|renesas/configuration/os_abstraction/src/r_os_abstraction-ddavi.c|tes/GUI_Sample/Common/Source/Platform/omap|lwip-1.4.1/test|tes/GUI_Sample/Source/Platform/win|renesas/middleware/WebIf/src/liveFile.c|renesas/middleware/lwip_ethernet/src/r_colate.c|lwip-1.4.1/src/core/ipv6|freertos/portable/memmang/heap_5.c|tes/GUI_Sample/Common/Source/Platform/win|freertos/portable/iar|renesas/middleware/ssif_drv|tes/GSE/Source/Platform/general/GSE_config.cpp|renesas/application/app_eeprom|freertos/croutine.c" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="src"/>
+						<entry excluding="renesas/drivers/r_cache|renesas/middleware/WebIf|renesas/middleware/riic_d2audio|freertos/portable/gcc/arm_ca9_rza1h|tes/GUI_Sample/Common/Source/Platform/rzg|renesas/configuration/os_abstraction/src/r_os_abstraction-ddavi.c|tes/GUI_Sample/Common/Source/Platform/omap|lwip-1.4.1/test|tes/GUI_Sample/Source/Platform/win|renesas/middleware/WebIf/src/liveFile.c|renesas/middleware/lwip_ethernet/src/r_colate.c|lwip-1.4.1/src/core/ipv6|freertos/portable/memmang/heap_5.c|tes/GUI_Sample/Common/Source/Platform/win|freertos/portable/iar|renesas/middleware/ssif_drv|tes/GSE/Source/Platform/general/GSE_config.cpp|renesas/application/app_eeprom|freertos/croutine.c" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="src"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
