Fixed Switch -> Currently set for polling the port pin Fixed the GPIO Read Added Enablement of the Power Stages 3.3v and HV

--- a/rza1lu_soundbar_v1/.settings/e2studio_project.prefs
+++ b/rza1lu_soundbar_v1/.settings/e2studio_project.prefs
@@ -1,2 +1,4 @@
 #
-#Thu Oct 22 22:28:26 EDT 2020
+#Tue Nov 03 22:31:25 EST 2020
+settingConfiguration=com.renesas.cdt.managedbuild.gcc.rz.configuration.debug.1403796341.376367202
+activeConfiguration=com.renesas.cdt.managedbuild.gcc.rz.configuration.debug.1403796341.376367202
