--- a/rza1lu_soundbar_v1/.settings/e2studio_project.prefs
+++ b/rza1lu_soundbar_v1/.settings/e2studio_project.prefs
@@ -1,4 +1,3 @@
 #
-#Tue Nov 03 22:31:25 EST 2020
-settingConfiguration=com.renesas.cdt.managedbuild.gcc.rz.configuration.debug.1403796341.376367202
-activeConfiguration=com.renesas.cdt.managedbuild.gcc.rz.configuration.debug.1403796341.376367202
+#Sun Nov 08 22:41:26 EST 2020
+activeConfiguration=com.renesas.cdt.managedbuild.gcc.rz.configuration.debug.1403796341
