--- a/rza1lu_soundbar_v1/.cproject
+++ b/rza1lu_soundbar_v1/.cproject
@@ -232,8 +232,7 @@
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/renesas/application/system/iodefines&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/renesas/application/system/iobitmasks&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/renesas/application/sound_gui_app/inc&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/renesas/application/sound_test1/inc&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/renesas/application/sound_test2/inc&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/renesas/application/soundbar_app/inc&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/renesas/application/graphics/inc&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/renesas/compiler/inc&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/renesas/configuration&quot;"/>
@@ -347,7 +346,9 @@
 								<option id="com.renesas.cdt.managedbuild.gcc.rz.option.linker.cpp.semihosting.558433534" name="Use semihosting (--specs=rdimon.specs)" superClass="com.renesas.cdt.managedbuild.gcc.rz.option.linker.cpp.semihosting" useByScannerDiscovery="false" value="false" valueType="boolean"/>
 								<option id="com.renesas.cdt.managedbuild.gcc.rz.option.linker.cpp.entrypoint.782175425" name="Entry Point:" superClass="com.renesas.cdt.managedbuild.gcc.rz.option.linker.cpp.entrypoint" useByScannerDiscovery="false" value="-Wl,-estart" valueType="string"/>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.renesas.cdt.managedbuild.gcc.rz.archives.cpp.userIncludeFile.2065154767" name="User defined archive (library) files (-l)" superClass="com.renesas.cdt.managedbuild.gcc.rz.archives.cpp.userIncludeFile" useByScannerDiscovery="false" valueType="stringList">
+									<listOptionValue builtIn="false" value="eGaC"/>
 									<listOptionValue builtIn="false" value="freetype_rznew"/>
+									<listOptionValue builtIn="false" value="Guiliani"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.renesas.cdt.managedbuild.gcc.rz.archives.cpp.userIncludePath.14734216" name="User defined archive search directories (-L)" superClass="com.renesas.cdt.managedbuild.gcc.rz.archives.cpp.userIncludePath" useByScannerDiscovery="false" valueType="stringList">
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/tes/Libraries/FreeRTOS/rza/Debug_StreamIt_eGML&quot;"/>
@@ -599,7 +600,7 @@
 							<tool id="com.renesas.cdt.managedbuild.gcc.rz.tool.archiver.1312035168" name="Cross ARM GNU Archiver" superClass="com.renesas.cdt.managedbuild.gcc.rz.tool.archiver"/>
 							<tool id="com.renesas.cdt.managedbuild.gcc.rz.tool.flash.1505022307" name="Cross ARM GNU Create Flash Image" superClass="com.renesas.cdt.managedbuild.gcc.rz.tool.flash">
 								<option id="ilg.gnuarmeclipse.managedbuild.cross.option.createflash.textsection.966620170" name="Section: -j .text" superClass="ilg.gnuarmeclipse.managedbuild.cross.option.createflash.textsection" useByScannerDiscovery="false" value="false" valueType="boolean"/>
-								<option id="ilg.gnuarmeclipse.managedbuild.cross.option.createflash.choice.96417354" name="Output file format (-O)" superClass="ilg.gnuarmeclipse.managedbuild.cross.option.createflash.choice" useByScannerDiscovery="false" value="ilg.gnuarmeclipse.managedbuild.cross.option.createflash.choice.ihex" valueType="enumerated"/>
+								<option id="ilg.gnuarmeclipse.managedbuild.cross.option.createflash.choice.96417354" name="Output file format (-O)" superClass="ilg.gnuarmeclipse.managedbuild.cross.option.createflash.choice" useByScannerDiscovery="false" value="ilg.gnuarmeclipse.managedbuild.cross.option.createflash.choice.binary" valueType="enumerated"/>
 								<option id="ilg.gnuarmeclipse.managedbuild.cross.option.createflash.datasection.1655910833" name="Section: -j .data" superClass="ilg.gnuarmeclipse.managedbuild.cross.option.createflash.datasection" useByScannerDiscovery="false" value="false" valueType="boolean"/>
 							</tool>
 							<tool id="com.renesas.cdt.managedbuild.gcc.rz.tool.listing.223074416" name="Cross ARM GNU Create Listing" superClass="com.renesas.cdt.managedbuild.gcc.rz.tool.listing">
@@ -1255,7 +1256,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="renesas/middleware/lwip_ethernet|lwip-1.4.1|tes|tes/GUI_Sample/Source/MyGUI_SR.cpp|renesas/application/sound_gui_app|tes/Guiliani/Include/Platform/eGML|freertos/portable/gcc/arm_ca9_rza1h|tes/GUI_Sample/Common/Source/Platform/rzg|renesas/configuration/os_abstraction/src/r_os_abstraction-ddavi.c|tes/GUI_Sample/Common/Source/Platform/omap|lwip-1.4.1/test|renesas/drivers/r_cache|tes/GUI_Sample/Source/Platform/win|renesas/middleware/WebIf/src/liveFile.c|renesas/middleware/lwip_ethernet/src/r_colate.c|renesas/middleware/WebIf|tes/Guiliani/Include/Platform/GL|lwip-1.4.1/src/core/ipv6|freertos/portable/memmang/heap_5.c|tes/GUI_Sample/Common/Source/Platform/win|freertos/portable/iar|renesas/middleware/ssif_drv|tes/GSE/Source/Platform/general/GSE_config.cpp|renesas/application/app_eeprom|freertos/croutine.c|tes/Guiliani/Include/Platform/win" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="src"/>
+						<entry excluding="tes/Guiliani/Include/Platform/eGML|tes/GUI_Sample/Source/MyGUI_SR.cpp|tes/GUI_Sample/Common/Source/Platform/rzg|renesas/application/sound_gui_app|tes/GUI_Sample/Common/Source/Platform/omap|lwip-1.4.1/test|renesas/middleware/WebIf|freertos/portable/memmang/heap_5.c|renesas/application/app_eeprom|freertos/portable/gcc/arm_ca9_rza1h|renesas/configuration/os_abstraction/src/r_os_abstraction-ddavi.c|renesas/drivers/r_cache|tes/GUI_Sample/Source/Platform/win|lwip-1.4.1|renesas/middleware/WebIf/src/liveFile.c|renesas/middleware/lwip_ethernet/src/r_colate.c|tes/Guiliani/Include/Platform/GL|lwip-1.4.1/src/core/ipv6|tes/GUI_Sample/Common/Source/Platform/win|freertos/portable/iar|renesas/middleware/ssif_drv|tes/GSE/Source/Platform/general/GSE_config.cpp|renesas/middleware/lwip_ethernet|freertos/croutine.c|tes/Guiliani/Include/Platform/win" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="src"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -1493,8 +1494,7 @@
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/renesas/application/system/iodefines&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/renesas/application/system/iobitmasks&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/renesas/application/sound_gui_app/inc&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/renesas/application/sound_test1/inc&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/renesas/application/sound_test2/inc&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/renesas/application/soundbar_app/inc&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/renesas/application/graphics/inc&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/renesas/compiler/inc&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/src/renesas/configuration&quot;"/>
@@ -2498,7 +2498,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="renesas/middleware/lwip_ethernet|lwip-1.4.1|tes|tes/GUI_Sample/Source/MyGUI_SR.cpp|renesas/application/sound_gui_app|freertos/portable/gcc/arm_ca9_rza1h|tes/GUI_Sample/Common/Source/Platform/rzg|renesas/configuration/os_abstraction/src/r_os_abstraction-ddavi.c|tes/GUI_Sample/Common/Source/Platform/omap|lwip-1.4.1/test|renesas/drivers/r_cache|tes/GUI_Sample/Source/Platform/win|renesas/middleware/WebIf/src/liveFile.c|renesas/middleware/lwip_ethernet/src/r_colate.c|renesas/middleware/WebIf|lwip-1.4.1/src/core/ipv6|freertos/portable/memmang/heap_5.c|tes/GUI_Sample/Common/Source/Platform/win|freertos/portable/iar|renesas/middleware/ssif_drv|tes/GSE/Source/Platform/general/GSE_config.cpp|renesas/application/app_eeprom|freertos/croutine.c" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="src"/>
+						<entry excluding="tes/GUI_Sample/Source/MyGUI_SR.cpp|freertos/portable/gcc/arm_ca9_rza1h|tes/GUI_Sample/Common/Source/Platform/rzg|renesas/application/sound_gui_app|renesas/configuration/os_abstraction/src/r_os_abstraction-ddavi.c|tes/GUI_Sample/Common/Source/Platform/omap|lwip-1.4.1/test|renesas/drivers/r_cache|tes/GUI_Sample/Source/Platform/win|lwip-1.4.1|renesas/middleware/WebIf/src/liveFile.c|renesas/middleware/lwip_ethernet/src/r_colate.c|renesas/middleware/WebIf|lwip-1.4.1/src/core/ipv6|freertos/portable/memmang/heap_5.c|tes/GUI_Sample/Common/Source/Platform/win|freertos/portable/iar|renesas/middleware/ssif_drv|tes/GSE/Source/Platform/general/GSE_config.cpp|renesas/middleware/lwip_ethernet|renesas/application/app_eeprom|freertos/croutine.c" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="src"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
