--- a/rza1lu_soundbar_v1/.settings/e2studio_project.prefs
+++ b/rza1lu_soundbar_v1/.settings/e2studio_project.prefs
@@ -1,3 +1,4 @@
 #
-#Wed Nov 11 17:22:53 EST 2020
-activeConfiguration=com.renesas.cdt.managedbuild.gcc.rz.configuration.debug.1403796341
+#Fri Nov 13 00:16:54 EST 2020
+settingConfiguration=com.renesas.cdt.managedbuild.gcc.rz.configuration.debug.1403796341.376367202
+activeConfiguration=com.renesas.cdt.managedbuild.gcc.rz.configuration.debug.1403796341.376367202
